Fix bug #28584: DOMText::splitText() does not split text properly     (benjcarson) Prototype fixes